// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.github.help"
    id="name.github"
    maxLength={200}
    onFieldChange={[MockFunction]}
    propKey="key"
    value=""
  />
  <AlmBindingDefinitionFormField
    help={
      <React.Fragment>
        settings.almintegration.form.url.github.help1
        <br />
        <em>
          https://github.company.com/api/v3
        </em>
        <br />
        <br />
        settings.almintegration.form.url.github.help2
        <br />
        <em>
          https://api.github.com/
        </em>
        <br />
        <br />
        settings.almintegration.form.url.github.private_key_warning
      </React.Fragment>
    }
    id="url.github"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value=""
  />
  <Alert
    className="big-spacer-top"
    variant="info"
  >
    <FormattedMessage
      defaultMessage="settings.almintegration.github.info"
      id="settings.almintegration.github.info"
      values={
        {
          "link": <withAppStateContext(DocLink)
            to="/devops-platform-integration/github-integration/"
          >
            learn_more
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </Alert>
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.app_id.github.help"
    id="app_id"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="appId"
    value=""
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.client_id.github.help"
    id="client_id.github"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="clientId"
    value=""
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.client_secret.github.help"
    id="client_secret.github"
    isSecret={true}
    maxLength={160}
    onFieldChange={[MockFunction]}
    overwriteOnly={false}
    propKey="clientSecret"
    value=""
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.private_key.github.help"
    id="private_key"
    isSecret={true}
    isTextArea={true}
    maxLength={2500}
    onFieldChange={[MockFunction]}
    overwriteOnly={false}
    propKey="privateKey"
    value=""
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.webhook_secret.github.help"
    id="webhook_secret.github"
    isSecret={true}
    maxLength={160}
    onFieldChange={[MockFunction]}
    optional={true}
    overwriteOnly={false}
    propKey="webhookSecret"
    value=""
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.github.help"
    id="name.github"
    maxLength={200}
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmBindingDefinitionFormField
    help={
      <React.Fragment>
        settings.almintegration.form.url.github.help1
        <br />
        <em>
          https://github.company.com/api/v3
        </em>
        <br />
        <br />
        settings.almintegration.form.url.github.help2
        <br />
        <em>
          https://api.github.com/
        </em>
        <br />
        <br />
        settings.almintegration.form.url.github.private_key_warning
      </React.Fragment>
    }
    id="url.github"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value="http://github.enterprise.com"
  />
  <Alert
    className="big-spacer-top"
    variant="info"
  >
    <FormattedMessage
      defaultMessage="settings.almintegration.github.info"
      id="settings.almintegration.github.info"
      values={
        {
          "link": <withAppStateContext(DocLink)
            to="/devops-platform-integration/github-integration/"
          >
            learn_more
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </Alert>
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.app_id.github.help"
    id="app_id"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="appId"
    value="123456"
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.client_id.github.help"
    id="client_id.github"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="clientId"
    value="client1"
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.client_secret.github.help"
    id="client_secret.github"
    isSecret={true}
    maxLength={160}
    onFieldChange={[MockFunction]}
    overwriteOnly={true}
    propKey="clientSecret"
    value="**clientsecret**"
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.private_key.github.help"
    id="private_key"
    isSecret={true}
    isTextArea={true}
    maxLength={2500}
    onFieldChange={[MockFunction]}
    overwriteOnly={true}
    propKey="privateKey"
    value="asdf1234"
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.webhook_secret.github.help"
    id="webhook_secret.github"
    isSecret={true}
    maxLength={160}
    onFieldChange={[MockFunction]}
    optional={true}
    overwriteOnly={true}
    propKey="webhookSecret"
    value="verySecretText!!"
  />
</Fragment>
`;
